Wireframe format added, all parts working

--- a/HW6/web/HW5CSS.css
+++ b/HW6/web/HW5CSS.css
@@ -73,3 +73,73 @@ form{
 
 
 input[readonly]{background-color: gray;}
+
+
+
+
+
+
+
+
+
+
+
+body{background-color:LightGray;}
+
+.wrap {text-align:center; width:90%; margin:0 auto; border:2px solid black; margin-top:25px;}
+
+.header {background-color:Gray; text-align:left; padding:25px;}
+.headerimg{background-color:Gray; float:left; width:160px;}
+.headertext{float:left; height:105px; padding-top:50px; padding-left:75px;}
+
+.footer {background-color:Gray; text-align:left; padding:25px;}	
+
+.main {background-color:SteelBlue; text-align:left; padding:25px;}
+
+
+
+
+
+/*Fat Erik's Pipelist*/
+/*http://css.maxdesign.com.au/listamatic/horizontal32.htm*/
+
+.navcontainer {margin-left: 30px; text-align:left; }
+
+.navlist
+{
+list-style: none;
+padding: 0;
+margin: 0;
+}
+
+.navlist li
+{
+display: inline;
+padding: 0;
+margin: 0;
+}
+
+.navlist li:before { content: "| "; }
+.navlist li:first-child:before { content: ""; }
+
+/*IE workaround*/
+/*All IE browsers*/
+* html #navlist li
+{
+border-left: 1px solid black;
+padding: 0 0.4em 0 0.4em;
+margin: 0 0.4em 0 -0.4em;
+}
+
+/*Win IE browsers - hide from Mac IE\*/
+* html #navlist { height: 1%; }
+
+* html #navlist li
+{
+display: block;
+float: left;
+}
+
+/*End hide*/
+/*Mac IE 5*/
+* html #navlist li:first-child { border-left: 0; }
